Delete Unnecessary Key Words and files

--- a/templates/all_bucket_list_activities.html
+++ b/templates/all_bucket_list_activities.html
@@ -4,7 +4,7 @@
 
 <div id="content">
     <header class="clearfix">
-        <h2 class="page_title pull-left">All Bucket List Activites</h2>
+        <h2 class="page_title pull-left">All Bucket List activities</h2>
     <a href="/create" type="button" class="btn btn-xs btn-primary pull-right">Create New</a>
     
     </header>
@@ -27,21 +27,21 @@
         
          {% if bucket_list_activities %}
             {% for bucket_list_activity in bucket_list_activities %}
-          <div class="row wishes-row">
+          <div class="row activities-row">
             <div class="col-sm-2 col-md-1">
                 <img class="img-circle hidden-xs" src="../static/img/img.jpg">
             </div>
             <div class="col-sm-10 col-md-11">
                 <div class="row">
                     <div class="col-xs-5 col-sm-9 col-md-9">
-                        <b>{{ bucket_list_activity.user }}</b> posted a wish on <b> {{ bucket_list_activity.title }}</b><br>
+                        <b>{{ bucket_list_activity.user }}</b> posted a bucket activity on <b> {{ bucket_list_activity.title }}</b><br>
                         <small> Posted {{ bucket_list_activity.date }}.</small>
                     </div>
                     <div class="col-xs-7 col-sm-3 col-md-3">
                         <div class="clearfix">
-                            <div class="pull-right wish-status">
-                                <b class="status"> Wish Status </b>
-                               {% if bucket_list_activity.bucket_item_progress == True %}
+                            <div class="pull-right activity-status">
+                                <b class="status"> Bucket Activity Status </b>
+                               {% if bucket_list_activity.bucket_activity_progress == True %}
                                 <button type="button" class="btn btn-xs btn-primary pull-right disabled">InProgress</button>
                                 {% else %}
                                 <button type="button" class="btn btn-xs btn-primary pull-right disabled">Accomplished</button>
@@ -51,7 +51,7 @@
                     </div>
                 </div>
                 <div class="bs-component">
-                <div class="well well-sm wishes-well"><p>
+                <div class="well well-sm activities-well"><p>
             {{ bucket_list_activity.description}} </p>
                 </div>
                 <div class="clearfix">
@@ -69,8 +69,8 @@
         {% endfor %}       
             {% else %}
             <div class="bs-component">
-                <div class="well well-sm wishes-well">
-                    <p> No wish added. </p>
+                <div class="well well-sm activities-well">
+                    <p> No Bucket Activities Available. </p>
                 </div>
                 </div>
             {% endif %}
