Delete Unnecessary Key Words and files

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -203,7 +203,7 @@ html,body{
 
 /* Toggle Side bar */
 
-/* WishForm Styles */
+/* BucketActivityForm Styles */
 
 #content{
     margin: 20px 0px 50px 0px;
@@ -226,7 +226,7 @@ html,body{
     padding: 20px;
 }
 
-/* WishForm Styles */
+/* BucketActivityForm Styles */
 
 /* Search Bar Styles */
 
