--- a/templates/my_public_bucket_activities.html
+++ b/templates/my_public_bucket_activities.html
@@ -1,11 +1,11 @@
 {% extends "layout.html" %} 
-{% block browsertitle %} Bucketlist | My Private Wishes {% endblock %}
+{% block browsertitle %} Bucketlist | My Public Bucket Activities {% endblock %}
 {% block content %}
-                              
+               
 <div id="content">
     <header class="clearfix">
-        <h2 class="page_title pull-left">My Private Wishes</h2>
-    <a href="/create" type="button" class="btn btn-xs btn-primary pull-right">Create New Wish</a>
+        <h2 class="page_title pull-left">My Public Bucket Activities</h2>
+    <a href="/create" type="button" class="btn btn-xs btn-primary pull-right">Create New bucket activity</a>
     
     </header>
     
@@ -15,7 +15,7 @@
         <div class="row search-row">
             <div class="col-md-12">
                 <div class="input-group">
-                    <input type="text" class="form-control" id="search" placeholder="Search wishes">
+                    <input type="text" class="form-control" id="search" placeholder="Search Bucket Activities">
                     <span class="input-group-btn">
                         <button type="button" class="btn btn-default go">Go!</button>
                     </span>
@@ -24,27 +24,27 @@
         </div>
         <!-- Search Bar -->
         
-        <div class="row wishes-row">
+        <div class="row activities-row">
             <div class="col-sm-2 col-md-1">
                 <img class="img-circle hidden-xs" src="../static/img/img.jpg">
             </div>
             <div class="col-sm-10 col-md-11">
                 <div class="row">
                     <div class="col-xs-5 col-sm-9 col-md-9">
-                        <b>John</b> posted a wish on <b> Joining Andela Fellowiship</b><br>
+                        <b>John</b> posted a bucket activity on <b> Joining Andela Fellowiship</b><br>
                         <small> Posted 2 days ago.</small>
                     </div>
                     <div class="col-xs-7 col-sm-3 col-md-3">
                         <div class="clearfix">
-                            <div class="pull-right wish-status">
-                                <b class="status"> Wish Status </b>
+                            <div class="pull-right activity-status">
+                                <b class="status"> Bucket Activity Status </b>
                                 <button type="button" class="btn btn-xs btn-primary pull-right disabled">InProgress</button>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="bs-component">
-                <div class="well well-sm wishes-well"><p>
+                <div class="well well-sm activities-well"><p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
                 </div>
                 <div class="clearfix">
@@ -63,27 +63,27 @@
             </div>
         </div> 
         <hr>   
-        <div class="row wishes-row">
+        <div class="row activities-row">
             <div class="col-sm-2 col-md-1">
                 <img class="img-circle hidden-xs" src="../static/img/img.jpg">
             </div>
             <div class="col-sm-10 col-md-11">
                 <div class="row">
                     <div class="col-xs-5 col-sm-9 col-md-9">
-                        <b>John</b> posted a wish on <b> Joining Andela Fellowiship</b><br>
+                        <b>John</b> posted a bucket activity on <b> Joining Andela Fellowiship</b><br>
                         <small> Posted 2 days ago.</small>
                     </div>
                     <div class="col-xs-7 col-sm-3 col-md-3">
                         <div class="clearfix">
-                            <div class="pull-right wish-status">
-                                <b class="status"> Wish Status </b>
+                            <div class="pull-right activity-status">
+                                <b class="status"> Bucket Activity Status </b>
                                 <button type="button" class="btn btn-xs btn-primary pull-right disabled">InProgress</button>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="bs-component">
-                <div class="well well-sm wishes-well"><p>
+                <div class="well well-sm activities-well"><p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
                 </div>
                 <div class="clearfix">
