--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,8 +12,8 @@
 
     <!-- Custom Styles -->  
     <link href="../static/css/custom.css" rel="stylesheet">
-    <link href="../static/css/wish-form.css" rel="stylesheet">
-    <link href="../static/css/allwishes.css" rel="stylesheet">
+    <link href="../static/css/bucket_activities_form.css" rel="stylesheet">
+    <link href="../static/css/all_bucket_activities.css" rel="stylesheet">
     {% block Custom_css %} {% endblock%}       
   </head>
   <body>
@@ -25,24 +25,24 @@
               <h1 class="hidden-sm hidden-xs">Bucketlist</h1> 
                <ul>
                    <li class="link active">
-                       <a href="#collapse-all-wishes" data-toggle="collapse" aria-controls="collapse-all-wishes">
+                       <a href="#collapse-all-activities" data-toggle="collapse" aria-controls="collapse-all-activities">
                            <span class="glyphicon glyphicon-th" aria-hidden="true"></span>
-                           <span class="hidden-sm hidden-xs">All Public Wishes</span>                          
+                           <span class="hidden-sm hidden-xs">All Public Bucket Activities</span>                          
                        </a>
-                       <ul class="collapse collapseable" id="collapse-all-wishes">
-                           <li><a href="/">Public Wishes</a></li>
-                           <li><a href="/create">Create New Wish <span class="glyphicon glyphicon-plus pull-right"></span></a></li>                            
+                       <ul class="collapse collapseable" id="collapse-all-activities">
+                           <li><a href="/">Public Bucket Activities</a></li>
+                           <li><a href="/create">Create New Bucket Activity <span class="glyphicon glyphicon-plus pull-right"></span></a></li>                            
                        </ul>
                    </li>
                    <li class="link">
-                       <a href="#collapse-my-wishes" data-toggle="collapse" aria-controls="collapse-my-wishes">
+                       <a href="#collapse-my-activities" data-toggle="collapse" aria-controls="collapse-my-activities">
                            <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
-                           <span class="hidden-sm hidden-xs">Manage My Wishes</span>                         
+                           <span class="hidden-sm hidden-xs">Manage My Bucket</span>                         
                        </a>
-                       <ul class="collapse collapseable" id="collapse-my-wishes">
-                           <li><a href="/mywishes">All My Wishes</a></li>
-                           <li><a href="/mypublicwishes">My Public Wishes</a></li>
-                           <li><a href="/myprivatewishes">My Private Wishes</a></li>
+                       <ul class="collapse collapseable" id="collapse-my-activities">
+                           <li><a href="/my_bucket_activities">All My Buckets</a></li>
+                           <li><a href="/my_public_bucket_activities">My Public Buckets</a></li>
+                           <li><a href="/my_private_bucket_activities">My Private Buckets</a></li>
                        </ul>
                    </li>
                    <li class="link settings-btn">
