Add CRUD and Unit Tests

--- a/templates/bucket_activity_form.html
+++ b/templates/bucket_activity_form.html
@@ -4,7 +4,7 @@
 {% block content %}               
 <div id="content">
     <header>
-        <h2 class="page_title">Create a New Bucketlist activity </h2>
+        <h2 class="page_title">{{ heading }}</h2>
     </header>
     
     <div class="content-inner">
