--- a/templates/all_bucket_activities.html
+++ b/templates/all_bucket_activities.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="clearfix">
                     <div class="pull-right">                       
-                        <a href="/create" type="button" class="btn btn-xs btn-primary pull-right tag-margin" role="button">
+                        <a href="#"" type="button" class="btn btn-xs btn-primary pull-right tag-margin" role="button">
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>Edit</a>
                             <a href="#" type="button" class="btn btn-danger btn-xs pull-right tag-margin" role="button">
                                 <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Delete</a>
