--- a/templates/bucket_list_form.html
+++ b/templates/bucket_list_form.html
@@ -25,14 +25,14 @@
                 <div class="checkbox">
                     <label>
                         {{ form.bucket_activity_status(type="checkbox", value="true") }} 
-                       Make bucket activity not visible to others
+                       Make bucket List not visible to others
                     </label>
                 </div> 
                 
                 <div class="checkbox">
                     <label>
                         {{ form.bucket_activity_progress(type="checkbox", value="true") }} 
-                         Mark bucket activity as accomplished
+                         Mark bucket list as accomplished
                     </label>
                 </div>
                 <div class="clearfix">
