--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,8 +12,8 @@
 
     <!-- Custom Styles -->  
     <link href="../static/css/custom.css" rel="stylesheet">
-    <link href="../static/css/bucket_activity_form.css" rel="stylesheet">
-    <link href="../static/css/all_bucket_activities.css" rel="stylesheet">
+    <link href="../static/css/bucket_list_form.css" rel="stylesheet">
+    <link href="../static/css/bucket_list_activities.css" rel="stylesheet">
     {% block Custom_css %} {% endblock%}       
   </head>
   <body>
@@ -40,9 +40,9 @@
                            <span class="hidden-sm hidden-xs">Manage My Bucketlist</span>                         
                        </a>
                        <ul class="collapse collapseable" id="collapse-my-activities">
-                           <li><a href="/my_bucket_activities">All My Buckets</a></li>
-                           <li><a href="/my_public_bucket_activities">My Public Buckets</a></li>
-                           <li><a href="/my_private_bucket_activities">My Private Buckets</a></li>
+                           <li><a href="/my_bucket_list_activities">All My Buckets</a></li>
+                           <li><a href="/my_public_bucket_list_activities">My Public Buckets</a></li>
+                           <li><a href="/my_private_bucket_list_activities">My Private Buckets</a></li>
                        </ul>
                    </li>
                    <li class="link settings-btn">
