--- a/templates/my_public_bucket_list_activities.html
+++ b/templates/my_public_bucket_list_activities.html
@@ -1,10 +1,10 @@
 {% extends "layout.html" %} 
-{% block browsertitle %} Bucketlist | My Private Bucketlist activities {% endblock %}
+{% block browsertitle %} Bucketlist | My Public activities {% endblock %}
 {% block content %}
-                              
+               
 <div id="content">
     <header class="clearfix">
-        <h2 class="page_title pull-left">My Private Bucketlist activities</h2>
+        <h2 class="page_title pull-left">My Public Bucketlist activities</h2>
     <a href="/create" type="button" class="btn btn-xs btn-primary pull-right">Create New</a>
     
     </header>
@@ -31,13 +31,13 @@
             <div class="col-sm-10 col-md-11">
                 <div class="row">
                     <div class="col-xs-5 col-sm-9 col-md-9">
-                        <b>John</b> posted an activity on <b> Joining Andela Fellowiship</b><br>
+                        <b>John</b> posted a Bucket List on <b> Joining Andela Fellowiship</b><br>
                         <small> Posted 2 days ago.</small>
                     </div>
                     <div class="col-xs-7 col-sm-3 col-md-3">
                         <div class="clearfix">
-                            <div class="pull-right activity-status">
-                                <b class="status"> Bucket Activity Status </b>
+                            <div class="pull-right activitity-status">
+                                <b class="status"> Bucket List Status </b>
                                 <button type="button" class="btn btn-xs btn-primary pull-right disabled">InProgress</button>
                             </div>
                         </div>
@@ -66,13 +66,13 @@
             <div class="col-sm-10 col-md-11">
                 <div class="row">
                     <div class="col-xs-5 col-sm-9 col-md-9">
-                        <b>John</b> posted a Bucket Activity on <b> Joining Andela Fellowiship</b><br>
+                        <b>John</b> posted a Bucket List on <b> Joining Andela Fellowiship</b><br>
                         <small> Posted 2 days ago.</small>
                     </div>
                     <div class="col-xs-7 col-sm-3 col-md-3">
                         <div class="clearfix">
-                            <div class="pull-right activity-status">
-                                <b class="status"> Bucket Activity Status </b>
+                            <div class="pull-right activitity-status">
+                                <b class="status"> activitity Status </b>
                                 <button type="button" class="btn btn-xs btn-primary pull-right disabled">InProgress</button>
                             </div>
                         </div>
@@ -83,7 +83,7 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
                 </div>
                 <div class="clearfix">
-                    <div class="pull-right">                           
+                    <div class="pull-right">                             
                         <a href="/create" type="button" class="btn btn-xs btn-primary pull-right tag-margin" role="button">
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>Edit</a>
                             <a href="#" type="button" class="btn btn-danger btn-xs pull-right tag-margin" role="button">
