--- a/templates/bucket_list_activities.html
+++ b/templates/bucket_list_activities.html
@@ -11,54 +11,39 @@
     
     
     <div class="content-inner">
-        <!-- Search Bar -->
-        <div class="row search-row">
-            <div class="col-md-12">
-                <div class="input-group">
-                    <input type="text" class="form-control" id="search" placeholder="Search Bucket">
-                    <span class="input-group-btn">
-                        <button type="button" class="btn btn-default go">Go!</button>
-                    </span>
-                </div>
-            </div>
-        </div>
-        <!-- Search Bar -->   
+   
   
         
          {% if bucket_list_activities %}
-            {% for bucket_list in bucket_list_activities %}
+            {% for bucket_list_activity in bucket_list_activities %}
           <div class="row activities-row">
-            <div class="col-sm-2 col-md-1">
-                <img class="img-circle hidden-xs" src="../static/img/img.jpg">
-            </div>
-            <div class="col-sm-10 col-md-11">
+            
+            <div class="col-sm-12 col-md-12">
                 <div class="row">
                     <div class="col-xs-5 col-sm-9 col-md-9">
-                        <b>{{ bucket_list.user }}</b> posted a bucket activity on <b> {{ bucket_list.title }}</b><br>
-                        <small> Posted {{ bucket_list.date }}.</small>
+                        <b>{{ bucket_list_activity.user }}</b> posted a bucket activity on <b> {{ bucket_list_activity.title }}</b><br>
+                        <small> Posted {{ moment(bucket_list_activity.date).fromNow() }}.</small>
                     </div>
                     <div class="col-xs-7 col-sm-3 col-md-3">
                         <div class="clearfix">
                             <div class="pull-right activity-status">
-                                <b class="status"> Bucket Activity Status </b>
-                               {% if bucket_list.bucket_activity_progress == True %}
-                                <button type="button" class="btn btn-xs btn-primary pull-right disabled">InProgress</button>
-                                {% else %}
-                                <button type="button" class="btn btn-xs btn-primary pull-right disabled">Accomplished</button>
-                                {% endif %}
+                                <b class="status"> Bucket List Category </b>
+                               
+                                <button type="button" class="btn btn-xs btn-primary pull-right disabled">{{bucket_list_activity.bucket_list_name}}</button>
+                                
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="bs-component">
                 <div class="well well-sm activities-well"><p>
-            {{ bucket_list.description}} </p>
+            {{ bucket_list_activity.description}} </p>
                 </div>
                 <div class="clearfix">
                     <div class="pull-right">                       
-                        <a href="#"" type="button" class="btn btn-xs btn-primary pull-right tag-margin" role="button">
+                        <a href="{{ url_for('edit_bucket_list_activities', bucket_list_activity_id=bucket_list_activity.bucket_list_activity_id)}}"" type="button" class="btn btn-xs btn-primary pull-right tag-margin" role="button">
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>Edit</a>
-                            <a href="#" type="button" class="btn btn-danger btn-xs pull-right tag-margin" role="button">
+                            <a href="{{ url_for('delete_bucket_list_activity', bucket_list_activity_id=bucket_list_activity.bucket_list_activity_id)}}" type="button" class="btn btn-danger btn-xs pull-right tag-margin" role="button">
                                 <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Delete</a>
                     </div>
                     </div>
