--- a/templates/login.html
+++ b/templates/login.html
@@ -27,14 +27,14 @@
             <div class="login_form">
                 <section class="login_content">
                     <form action="" method="post">
-                      
-                        <h1>Welcome to Bucketlist</h1>
-                    
-                        <div>                            
-                        <input type="text" class="form-control" placeholder="Username" required="" />
+                       <!-- Prevents Cross site Scripting Attacks -->
+                        {{form.hidden_tag()}}
+                        <h1>Welcome to Bucketlist</h1>                    
+                        <div>  
+                        {{ form.username(placeholder="Username", class="form-control", required ="*" ) }}                       
                         </div>
                         <div>
-                            <input type="password" class="form-control" placeholder="Password" required="" />
+                        {{ form.password(placeholder="Password", class="form-control", required ="*" ) }}                            
                         </div>
                         <div>
                             <button type="submit" class="btn btn-default">Log In</button>
