--- a/templates/signup.html
+++ b/templates/signup.html
@@ -28,18 +28,16 @@
                 <section class="login_content">
                     <form action="" method="post">
                         <h1>Create Account</h1>
-                        
+                         <!-- Prevents Cross site Scripting Attacks -->
+                        {{form.hidden_tag()}}
                         <div>
-                            <input type="text" class="form-control" placeholder="Username" required="*" />
+                            {{ form.username(placeholder="Username", class="form-control", required ="*" ) }}                            
                         </div>
                         <div>
-                        <input type="email" class="form-control" placeholder="Email" required="*" />                          
+                            {{ form.password(placeholder="Password", class="form-control", required ="*" ) }}                                                  
                         </div>
                         <div>
-                         <input type="password" class="form-control" placeholder="Password" required="*" />                           
-                        </div>
-                        <div>
-                         <input type="password" class="form-control" placeholder="Confirm Password" required="*" />                          
+                            {{ form.confirm_password(placeholder="Confirm Password", class="form-control", required ="*" ) }}                                                   
                         </div>
                         <div>
                             <button type="submit" class="btn btn-default">Register</button>
